// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Item > should render 1`] = `
<div>
  <!---->
  <!---->
  
  <!---->
   
  <p>
    Hello
  </p>
  <!---->
  
</div>
`;

exports[`Item > should render 2`] = `
<div>
  <!---->
  <!---->
  
  <!---->
   
  <p>
    World
  </p>
  <!---->
  
</div>
`;

exports[`Item > should render with custom mapping 1`] = `
<div>
  <!---->
  <!---->
  
  <!---->
   
  <!---->
  
</div>
`;

exports[`Item > should render with custom mapping 2`] = `
<div>
  <!---->
  <rk-icon
    aria-label="World"
    class=""
    role="img"
  >
    <i
      aria-hidden="true"
      class="World"
    />
  </rk-icon>
  <!---->
   
  <p>
    World
  </p>
  <!---->
  
</div>
`;

exports[`Item > should render with custom mapping 3`] = `
<div>
  <!---->
  <rk-icon
    aria-label="World"
    class=""
    role="img"
  >
    <i
      aria-hidden="true"
      class="World"
    />
  </rk-icon>
  <!---->
   
  <p>
    World
  </p>
  <!---->
  
</div>
`;

exports[`Item > should render with icon 1`] = `
<div>
  <!---->
  <rk-icon
    aria-label="Hello"
    class=""
    role="img"
  >
    <i
      aria-hidden="true"
      class="world"
    />
  </rk-icon>
  <!---->
   
  <p>
    Hello
  </p>
  <!---->
  
</div>
`;

exports[`Item > should render with image 1`] = `
<div>
  <!---->
  <!---->
  <img
    alt="Hello"
    src="world.png"
  />
  
  <!---->
   
  <p>
    Hello
  </p>
  <!---->
  
</div>
`;
